--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <color name="colorPrimary">#6200EE</color>-->
+    <!--    <color name="colorPrimary">#6200EE</color>-->
     <color name="colorPrimary">#009688</color>
-<!--    <color name="colorPrimaryDark">#3700B3</color>-->
+    <!--    <color name="colorPrimaryDark">#3700B3</color>-->
     <color name="colorPrimaryDark">#515151</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#D5000000</color>
     <color name="colorButton">#009688</color>
     <color name="colorHint">#5E5E5E</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="purple_500">#9C27B0</color>
+    <color name="teal_200">#80CBC4</color>
+    <color name="white">#FFFFFF</color>
+    <color name="purple_700">#7B1FA2</color>
+    <color name="black">#000000</color>
+    <color name="teal_500">#009688</color>
+    <color name="teal_700">#00796B</color>
+    <color name="purple_200">#CE93D8</color>
+
+
+
+
+
+
 </resources>
